--- a/index.html
+++ b/index.html
@@ -112,49 +112,64 @@
         <div class="th1">
             <img src="assets/Thumbnail-8.png" alt="t8">
            <div class="details"><p>Bulbuli|Coke Studio Bangla|<br>Season one|Ritu Raj Nandita</p></div> 
+           <div class="channal"><p>Coke Bangla Studio</p> <div class="verified"></div>
+        </div>
+
         <div class="th1">
             <img src="assets/Thumbnail-9.png" alt="t8">
             <div class="details"><p></p></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-10.png" alt="t10">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-11.png" alt="t11"></div>
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         <div class="th1">
             <img src="assets/Thumbnail-4.png" alt="t4">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-5.png" alt="t5">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-6.png" alt="t6">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-7.png" alt="t7">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail.png" alt="t3">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-1.png" alt="t1">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
         <div class="th1">
             <img src="assets/Thumbnail-2.png" alt="t2">
         
             <div class="details"></div>
+            <div class="channal"><p></p></div>
+            
         </div>
         <div class="th4">
             <img src="assets/Thumbnail-3.png" alt="t3">
             <div class="details"></div>
+            <div class="channal"><p></p></div>
         </div>
     </div>
 </body>
